feat: password restoring
